# reminder-bot

./: .dockerignore  .editorconfig  .env.example  .gitignore  .golangci.yaml  Cargo.toml  Dockerfile  ReminderBot.sln  docker-compose.yml  go.mod  go.sum
.github/workflows/: build.yml  pr-check.yml  pr-status.yml
ReminderBot.Bot/: Bot.cs  BotVersion.cs  Config.cs  Program.cs  ReminderBot.Bot.csproj  ReminderBot.csproj  packages.lock.json
ReminderBot.Bot/Extensions/: Extensions.cs
ReminderBot.Bot/Handler/: CallbackQueryHandler.cs  CommandHandler.cs  Handler.cs  MessageHandler.cs  Types.cs
ReminderBot.Bot/Migrations/: 20231123050645_Init.Designer.cs  20231123050645_Init.cs  PersistenceContextModelSnapshot.cs
ReminderBot.Bot/Persistence/: PersistenceContext.cs
ReminderBot.Bot/Types/: Command.cs
ReminderBot.Bot/Utils/: Utils.cs
ReminderBot.Test/: Placeholder.cs  ReminderBot.Test.csproj
cmd/reminderbot/: main.go
config/: config.go
ent/: client.go  ent.go  mutation.go  operations.go  operations_create.go  operations_delete.go  operations_query.go  operations_update.go  reminds.go  reminds_create.go  reminds_delete.go  reminds_query.go  reminds_update.go  runtime.go  settings.go  settings_create.go  settings_delete.go  settings_query.go  settings_update.go  tx.go
ent/enttest/: enttest.go
ent/hook/: hook.go
ent/migrate/: schema.go
ent/operations/: operations.go  where.go
ent/predicate/: predicate.go
ent/reminds/: reminds.go  where.go
ent/runtime/: runtime.go
ent/schema/: operations.go  reminds.go  settings.go
ent/settings/: settings.go  where.go
internal/bot/: bot.go  handler.go  middleware.go  operations.go
internal/database/: database.go
src/: commands.rs  config.rs  lib.rs  main.rs  models.rs  schema.rs
(+11 files in other folders)
