[package]
name = "reminder_bot"
version = "0.1.0-alpha.1"
edition = "2021"
rust-version = "1.68.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros", "rt"] }
chrono = "0.4.34"
cron = "0.12.0"
dotenvy = "0.15.7"
diesel = { version = "2.1.0", features = ["postgres", "uuid"] }
chrono-tz = "0.8.6"
uuid = "1.7.0"
tokio-cron-scheduler = "0.10.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
